objects/TW1_Contato_Relacionado__c.object
<CustomObject>
    <fields>
        <fullName>Caso__c</fullName>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Clientes Relacionados</relationshipLabel>
        <relationshipName>Contatos_Relacionados</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contato__c</fullName>
        <label>Contato</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contatos Relacionados</relationshipLabel>
        <relationshipName>Contatos_Relacionados</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Nome__c</fullName>
        <formula>Contato__r.FirstName+&quot; &quot;+ Contato__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Conta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contatos Relacionados</relationshipLabel>
        <relationshipName>Contatos_Relacionados</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Funcao__c</fullName>
        <label>Função</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrador</fullName>
                </value>
                <value>
                    <fullName>Conjuge</fullName>
                </value>
                <value>
                    <fullName>Irmão(â)</fullName>
                </value>
                <value>
                    <fullName>Mãe</fullName>
                </value>
                <value>
                    <fullName>Pai</fullName>
                </value>
                <value>
                    <fullName>Procurador</fullName>
                </value>
                <value>
                    <fullName>Secretária</fullName>
                </value>
                <value>
                    <fullName>Sócio</fullName>
                </value>
                <value>
                    <fullName>Sogro(a)</fullName>
                </value>
                <value>
                    <fullName>Principal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Idade__c</fullName>
        <label>Idade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contato Relacionado</label>
    <nameField>
        <displayFormat>CR# {00000000}</displayFormat>
        <label>Nome do Contato Relacionado</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contatos Relacionados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>